# Dropsilo

./: .env.template  .gitignore  CLAUDE.md  CLICKUP_QUICKSTART.md  CLICKUP_STATUS.md  GEMINI.md  README.md  dropsilo_customers_20260225.csv  first.py
.claude/: settings.local.json
Dropsilo/Dropsilo.ai/: vps-comparison.md
IMPLEMENT/: 001_dropsilo_technical_framework.md  Implementation of Spice AI into Dropsilo.md  Implementation v2.md  Implementation v3.md
a. strategy/1_centralized_database/: 001_core_banking_platforms.md  002_dropsilo_technical_framework_xref.md  003_banking_ai_compliance_stack.md  003_confidential_computing_xref.md  005_unified_multimodal_data_and_llm_isolation_xref.md  Snowflake_Enterprise_AI_Integration_Report.md  _index.md  jack_henry_index.md  jack_henry_skills.md  methodology_index.md
a. strategy/2_business_model/: 001_onprem_ai_ops_team_xref.md  002_competitive_landscape_community_bank_ai.md  _index.md
a. strategy/3_product/: 002_confidential_computing_private_ai.md  003_banking_ai_compliance_xref.md  004_competitive_landscape_xref.md  005_unified_multimodal_data_and_llm_isolation.md  _index.md  _skills.md
a. strategy/4_hardware_infrastructure/: 001_onprem_ai_ops_team.md  (+5 more)
b. directives/: example_directive.md  research_relay.md
c. execution/: clickup_mapping.json  generate_mock_bank_data.py  ingest_flat_files.py  snowflake_ddl_v0.sql  webhooks.json
c. execution/clickup_mcp/: CLAUDE_DESKTOP_CONFIG.md  INSTALLATION_NOTES.md  README.md  __init__.py  pyproject.toml  server.py  setup.sh
my-app/: package-lock.json  package.json
(+53 files in other folders)
